# smol

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  analyze_192.py  analyze_387.py  analyze_4cycles.py  analyze_636.py  analyze_78_pairs.py  analyze_EUxo.py  analyze_all_78.py  analyze_counterexample.py  analyze_edge_relationship.py  analyze_matrix.py  analyze_preservation.py  analyze_slides.py  analyze_symmetry.py  check_c1c2_db.py  check_c1c2_direct.py  check_c1c2_traces.py  check_c2_prime.py  check_c2prime_sufficient.py  check_c3_iso.py  check_c3_path.py  check_c3_row.py  check_c3_sym.py  check_c3_tri.py  check_cycle_preservation.py  check_implications.py  check_implications_direct.py  check_nontrivial.py  check_slides.py  check_swap_symmetry.py  check_twins.py  compare_cospec_vs_counter.py  compare_gqztrg.py  (+37 more)
.github/workflows/: ci.yml
api/: __init__.py  database.py  main.py  models.py
api/routes/: mechanisms.py
api/templates/: _spectra_plots.html  about.html  api_docs.html  base.html  compare.html  error.html  glossary.html  graph_detail.html  graph_detail.html.backup  graph_list.html  home.html  search_form.html  search_results.html  similar.html  stats.html
db/: __init__.py  charpoly.py  database.py  graph_data.py  matrices.py  matrix_types.py  metadata.py  spectrum.py  tags.py
doc/: wireframes.md
docs/: 78_pairs.txt  adj_n6_non_gm_sample.txt  adj_n7_non_gm_sample.txt  adj_n8_gm_correct.txt  adj_n8_gm_expanded.txt  adj_n8_non_gm_sample.txt  adj_n9_gm_correct.txt  adj_n9_non_gm_sample.txt  api_mechanisms.md  complete_self_contained_proof.md  deployment.md  generalized_bipartite_swap.md  generalized_mechanism_a_proof.md  generalized_mechanism_findings.md  generalized_switch_theorem.md  mechanism_a_kernel_proof.md  mechanism_a_proof.md  mechanism_b_proof.md  mechanism_classification.md  mechanisms_implementation_plan.md  nbl_11_switches_analysis.md  nbl_78_pairs_analysis.md  nbl_switch_theorem_attempt.md  nbl_switching_investigation.md  nbl_switching_theorem_verification.md  oeis_sequences.md  pairs_bipartite_swap.txt  pairs_c1c2.txt  research_summary.md  unified_theorem.md
examples/: advanced_api.py  basic_api.py  cospectral_exploration.ipynb  spectral_analysis.ipynb
paper/: braiid.sty  cover_letter.md  make_figures.py  scientific_data_descriptor.md  smol.rsm  smol.tex
scripts/: algebraic_approach.py  analyze_156.py  analyze_all_78_pairs.py  analyze_edge_differences.py  analyze_hard_case.py  analyze_mechanisms.py  analyze_potential_cyclic.py  analyze_successor_swap.py  analyze_switch_conditions.py  analyze_traces.py  backfill_matrices.py  backfill_matrix.py  backfill_nb_exact.py  block_structure_analysis.py  boundary_analysis.py  build_charpoly_hashes.py  charpoly_sweep.py  check_c1c2.py  check_mechanism_a.py  check_uniform_cross.py  classify_kirchhoff_signless.py  classify_pairs.py  classify_switches.py  combined_transfer_analysis.py  comprehensive_conditions.py  comprehensive_experiments.py  compute_cospectral_pairs.py  compute_cospectral_tables.py  compute_distance.py  compute_kirchhoff_signless.py  compute_kirchhoff_signless_parallel.py  compute_kirchhoff_signless_simple.py  compute_properties.py  compute_tags.py  cospectral_tables.py  create_gm_pair.py  deep_structural_analysis.py  deep_structure.py  deep_switch_analysis.py  deploy_db.py  (+77 more)
sql/: add_distance_laplacians.sql  add_distance_matrix.sql  add_ecc_distnorm.sql  add_kblocking.sql  add_mechanisms_table.sql  add_noncycling.sql  add_seidel_matrix.sql  add_yoon.sql  allow_hashonly_nulls.sql  migrate_cospectral_families.sql  migrate_kblock_family.sql  schema.sql  schema_sqlite.sql
tests/: test_api.py  test_api_queries.py  test_compute_properties.py  test_examples.py  test_graph_data.py  test_matrices.py  test_matrix_types.py  test_spectrum.py  test_tags.py
