[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smol"
version = "0.1.0"
description = "SMOL: Spectra and Matrices Of Little graphs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "psycopg2-binary>=2.9",
    "fastapi>=0.124.4",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["db*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]
